fix submit button on iPhone

--- a/styles.css
+++ b/styles.css
@@ -345,6 +345,7 @@ textarea {
 .submit {
   cursor: pointer;
   display: block;
+  -webkit-appearance: none;
 }
 
 
